styles/styles.css
/* ... */
.footer-top {
    display: flex;
    width:100%;
}

.footer-top .left {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin : 0.5% 0.5% 0.5% 20%;    
    flex-wrap: wrap;
}

.footer-top .right{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin : 0.5% 0.5% 0.5% 10%;    
    flex-wrap: wrap;
}

h1 {
    font-size: 1.5rem;
    margin: 0;
}

nav {
    display:flex;
    justify-content: space-around;
    align-items: center; 
    padding: 10px 20px;
}
.left {
    display:flex;
    align-items: center;
    gap: 10px;
}
.left h1{
    color: grey;
}
.chef-logo {
    width: 50px;
    height: 50px;
}
.right ul{
    display: flex;
    list-style: none;
    gap: 20px;
}

.home {
    text-decoration: none;
    outline-style: none;
    color: rgb(104, 68, 3);
    font-size: 1rem;
}
.home:hover{
    font-weight: bold;
    cursor: pointer;
}
.contactBtn {
    text-decoration: none;
    outline-style: none;
    /* background-color: rgb(202, 193, 176); */
    background-color: orange;
    color:white;
    /* color: rgb(104, 68, 3); */
    padding: 0.5rem;
    border-radius: 10px;
    font-size: 1rem;
}
.contact:hover{
    background-color: rgb(180, 173, 158);
    cursor: pointer;
}
main {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: auto;
    min-height: 60rem;
}

.middleSec {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #e1d5c8;
    max-width: auto ;
    width: 100%;
    gap:30px;
    padding: 1.5rem;
}
.galleryTitle{
    display: flex;
    flex-direction: column;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 1.5rem;
}

.galTitle{
    align-items: center;
    color: grey;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
    font-size: 2.5rem;  
    min-width: 3rem;
    padding: 1.5rem;
}

.galDesc{
    display: flex;
    justify-content: center;
    align-items: center;
    color: grey;
    align-items: center;
    font-size: 1.2rem;  
    /* max-width: 650px;  */
    max-width: 40rem;     
    flex-wrap: wrap;   
}

.searchBar {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1.5rem;
}

.inputSearch{
    display:flex;
    justify-content: center;
    color: rgb(126 84 7);
    width: 35rem;
/* 
    width: 100%;
    max-width: 35rem; */
    
    padding: 1rem;
    font-size: 0.9rem; 
    border: none;
    border-radius: 30px;
    box-shadow: 1px 1px 5px rgb(126 84 7);
    
}

.inputSearch:focus{
    cursor:text;
    outline: none;
    border: 1px solid rgb(133, 90, 12);
}
.inputSearch:hover{
    cursor: text;
}
.notFoundMsg {
    display: flex;
    justify-content: center;
    /* align-items: center; */
    color: gray;
    font-style: italic;
    width: 100%;
    max-width: 30rem;   
    padding: 15rem;
}

.dishes{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 30px;
    padding: 1.5rem;
    max-width: 80rem; 
    /* display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding: 1.5rem;       */
}

/* Dish Card Info */
.dishCard {
    display: flex;    
    flex-direction: column;
    justify-items: flex-start;
    height: auto;
    max-height: 23rem; 
    width: 100%;    
    max-width: 25rem;   
    padding: 0.1rem;
    border: 0.5px solid rgb(236, 224, 203);
    background-color: rgb(252, 250, 248);
    color: rgb(133, 90, 12);
    border-radius: 20px;
    transition: transform 0.3s;
    /* flex-wrap: wrap; */
    flex-shrink: 0;

    /*Responsive */
    flex: 1 1 280px;   /* key for responsiveness */
    max-width: 25rem;
    width: 100%;    
}

.dishCard:hover {
    transform: scale(1.05);
    border: 1px solid rgb(133, 90, 12);
    box-shadow: 2px 2px 10px rgb(133, 90, 12);
}
.dishImg {
    justify-content: stretch;
    border-radius: 15px 15px 0 0;
    margin: 0;
    /* padding: 0px; */
    width: 100%;
    height: 45%;    
}

.dishImg img {
    width: 100%;
    height: 100%;    
    border-radius: inherit;
    object-fit: cover;
    display: block;        
}
 
.dishDetails {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0.5rem;
}
.dishTitle {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.title { 
    color: rgb(133, 90, 12);
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
}

.dishType {
    background-color: rgb(247, 209, 140);
    color: rgb(104, 68, 3);
    padding: 0.2rem 0.5rem;
    border-radius: 0.5rem;
    font-size: 0.8rem;
    width: fit-content;
}

.dishDesc {
    display: flex;
    font-family: Arial, Helvetica, sans-serif;
    /* font-size: 1em; */
    font-size: 1rem;
    line-height: 1.5;
    color: rgb(104, 68, 3);
}        

.badge {
    display: flex;
    justify-content: flex-start;
    background-color: rgb(252, 250, 248);        
    font-family: Arial, Helvetica, sans-serif;    
    color: rgb(104, 68, 3);
    /* font-size: 11px; */
    font-size: 0.7rem;
    gap: 20px;
    width: 22rem;
    width: 22rem;
    /* margin-bottom: 0; */
}      

.dishBadge{
    display: flex;
    /* justify-content: space-evenly; */
    justify-content: center;
    background-color: white;
    font-family: Arial, Helvetica, sans-serif;    
    color: rgb(104, 68, 3);
    font-size: 0.8rem;
    gap: 50px;
    padding: 32px;
    width: fit-content;
    /* min-width: 450;
    width: 100%; */
    min-width: 20rem;
    border-radius: 20px;
}    
/* .prepBadge  */
.dishBadge section{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:10px;
}
/* Preparation Time */
.emojip{
    width:100%;
    max-width: 20px;
}

.lblp{
    font-size: 0.7rem;
}
.prepTime{
    font-size: 1rem;
}
/* ... */

